--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,3 +27,37 @@
     background-position: center center;
     background-repeat: no-repeat;
 }
+
+.info-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 2px;
+    background-color: black;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 100;
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.info-text {
+    font-size: 16px;
+    color: white;
+
+    animation: fadeInOut 3s ease-in-out infinite;
+}
